Add minimal resolver program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,4 +149,12 @@ add_executable(litecov-resolver
 )
 
 target_link_libraries(litecov-resolver tinyinst)
+
+project("resolver")
+
+add_executable(resolver
+  "resolver.cpp"
+)
+
+target_link_libraries(resolver tinyinst)
 endif()
